// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wing compile -t tf-aws > clients/A.inflight.js 1`] = `
"export class A_inflight  {
constructor({  }) {


}
async  handle(msg)  {
	{
  return;
}
}}"
`;

exports[`wing compile -t tf-aws > clients/B.inflight.js 1`] = `
"export class B_inflight  {
constructor({  }) {


}
async  handle(msg)  {
	{
  return 5;
}
}}"
`;

exports[`wing compile -t tf-aws > main.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.15.2",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile -t tf-aws > preflight.js 1`] = `
"const $stdlib = require('@winglang/sdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		case \\"tf-gcp\\":
			return $stdlib.tfgcp.App;
		case \\"tf-azure\\":
			return $stdlib.tfazure.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

const cloud = require('@winglang/sdk').cloud;
class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"impl_interface\\", plugins: $plugins });
  
  class A extends $stdlib.core.Resource {
  	constructor(scope, id, ) {
  	super(scope, id);
  {
  }
  }
  	
  	_toInflight() {
  	
  	const self_client_path = require('path').resolve(__dirname, \\"clients/A.inflight.js\\").replace(/\\\\\\\\/g, \\"/\\");
  	return $stdlib.core.NodeJsCode.fromInline(\`(new (require(\\"\${self_client_path}\\")).A_inflight({}))\`);
  }
  }
  A._annotateInflight(\\"handle\\", {});
  class B extends $stdlib.core.Resource {
  	constructor(scope, id, ) {
  	super(scope, id);
  {
  }
  }
  	
  	_toInflight() {
  	
  	const self_client_path = require('path').resolve(__dirname, \\"clients/B.inflight.js\\").replace(/\\\\\\\\/g, \\"/\\");
  	return $stdlib.core.NodeJsCode.fromInline(\`(new (require(\\"\${self_client_path}\\")).B_inflight({}))\`);
  }
  }
  B._annotateInflight(\\"handle\\", {});
  const x = new A(this,\\"A\\");
  const y = new $stdlib.core.Inflight(this, \\"$Inflight1\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require('path').resolve(__dirname, \\"proc.a5455e5c5848cfc293fcb861d9393d32e29a39f8dc8ac79c19dd5289279762fe/index.js\\").replace(/\\\\\\\\/g, \\"/\\")),
    bindings: {
      x: {
        obj: x,
        ops: []
      },
    }
  });
}
}
new MyApp().synth();"
`;

exports[`wing compile -t tf-aws > proc.a5455e5c5848cfc293fcb861d9393d32e29a39f8dc8ac79c19dd5289279762fe/index.js 1`] = `
"async handle() { const { x } = this; {
  (await x.handle(\\"hello world!\\"));
} };"
`;

exports[`wing test > stdout 1`] = `"pass ─ impl_interface.w (no tests)"`;
